# hermes-trading

./: Dockerfile  monitor.py  monitor_once.py  pyproject.toml  railway.json
hermes_trading/: __init__.py  loop.py  reflect.py  run.py  score.py
hermes_trading.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hermes_trading/adapters/: __init__.py  macro.py  news.py  onchain.py  price.py
state/: goal.yaml  hypotheses.jsonl  strategy.yaml
state/history/: v04.yaml
