[project]
name = "hermes_trading"
version = "0.1.0"
description = "Self-improving trading worker for Railway"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.3",
    "yfinance>=0.2",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "aiofiles>=23.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "rich>=13.0",
    "aiohttp>=3.9",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hermes_trading*"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
